Fix images dimensions, add Collapse component

--- a/kasa/src/components/Header/Header.module.scss
+++ b/kasa/src/components/Header/Header.module.scss
@@ -13,6 +13,7 @@ a, a:visited, ul {
 
 .homeLink, .aboutLink {
     text-decoration: underline;
+    font-size: 20px;
 }
 
 li:nth-child(2) {
