--- a/kasa/src/pages/Home/Home.module.scss
+++ b/kasa/src/pages/Home/Home.module.scss
@@ -34,8 +34,9 @@
 }
 
 .cardImg {
-    max-height: 100%;
-    max-width: 100%;
+    object-fit: cover;
+    height: 400px;
+    width: 100%;
     border-radius: 15px;
 }
 
